# Wnow

./: .gitignore  .prettierrc.js  PROJECT_DOCUMENTATION.md  README.md  c.json  components copy.json  eslint.config.js  index.html  notification.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.qwen/: settings.json  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icon.html  icon.icns
src-tauri/resources/dictionary/: en_ru.json  ru_en.json
src-tauri/resources/fonts/: README.md
src-tauri/resources/translate-model/en-ru/: .gitattributes  README.md
src-tauri/resources/translate-model/ru-en/: README.md
src-tauri/scripts/: download-models.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: capture.rs  mod.rs  preproccesor.rs
src-tauri/src/commands/: common.rs  database.rs  mod.rs  model.rs  monitor.rs  notification.rs  text_replacement.rs  translate.rs  translation.rs
src-tauri/src/handlers/: mod.rs  show_translate.rs  show_translate_with_replacement.rs  translate_selected_text.rs  translate_word_at_cursor.rs
src-tauri/src/img/: img.rs  mod.rs  text_replacement.rs
src-tauri/src/mouse/: mouse.rs
src-tauri/src/notification/: notification.rs
src-tauri/src/ocr/: mod.rs  ocr.rs  postprocess.rs  preproccesor.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src-tauri/src/setup/: database.rs  mod.rs  shortcuts.rs  tray.rs  windows.rs
src-tauri/src/source/: mod.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs
src-tauri/src/translation/: local.rs  mod.rs  translation.rs
src-tauri/src/utils/: hash.rs  mod.rs  resource.rs  shortcut.rs
src-tauri/src/windows/: windows.rs
(+102 files in other folders)
