[package]
name = "wnow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wnow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6.1"
scrap = "0.5.0"
image = "0.25.9"
ct2rs = "0.9.17"
imageproc = "0.26.0"
fast_image_resize = "5.6.0"
tokio = {version = "1.49.0", features = ["full"] }
chrono = "0.4.42"
repng = "0.2.2"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
thiserror = "2.0.17"
urlencoding = "2.1"
futures = "0.3.31"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
libc = "0.2.180"
strsim = "0.11.1"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
ocr-rs = "2.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
